...
  // Option dialog for priority
  val listOptionState = rememberUseCaseState()

  var displayOption by remember { mutableStateOf("") }

  val options = listOf(
    ListOption(titleText = "LOW"),
    ListOption(titleText = "MEDIUM"),
    ListOption(titleText = "HIGH")
  )

  ListDialog(
    state = listOptionState,
...

      TextField(
        value = updateTitle,
        onValueChange = { updateTitle = it },
        label = {
          Text(
            text = "UPDATE TITLE",
            style = TextStyle(
              fontFamily = FontFamily(Font(R.font.corm))
            )
          )
        },
        textStyle = TextStyle.Default.copy(fontFamily = FontFamily(Font(R.font.corm))),
...

      TextField(
        value = updateDescription,
        onValueChange = { updateDescription = it },
        label = {
          Text(
            text = "UPDATE DESCRIPTION",
            style = TextStyle(
              fontFamily = FontFamily(Font(R.font.corm))
            )
          )
        },
        textStyle = TextStyle.Default.copy(fontFamily = FontFamily(Font(R.font.corm))),
...
          modifier = Modifier
            .fillMaxWidth()
            .padding(top = 8.dp, end = 4.dp, bottom = 8.dp)
            .weight(1f)
        ) {
          Text(
            text = if(displayStartDate == "") "START DATE AND TIME" else displayStartDate,
            style = TextStyle(
              color = Color(0xFF775A00),
              fontFamily = FontFamily(Font(R.font.corm)),
              textAlign = TextAlign.Center
            )
          )
...
          modifier = Modifier
            .fillMaxWidth()
            .padding(top = 8.dp, bottom = 8.dp, start = 4.dp)
            .weight(1f)
        ) {
          Text(
            text = if(displayEndDate == "") "END DATE AND TIME" else displayEndDate,
            style = TextStyle(
              color = Color(0xFF775A00),
              fontFamily = FontFamily(Font(R.font.corm)),
              textAlign = TextAlign.Center
            )
          )
...
        colors = ButtonDefaults.buttonColors(Color(0xFFE4DDD5)),
        modifier = Modifier
          .fillMaxWidth()
          .padding(horizontal = 24.dp, vertical = 8.dp)
      ) {
        Text(
          text = if(displayOption == "") "PRIORITY LEVEL" else displayOption,
          style = TextStyle(
            color = Color(0xFF775A00),
            fontSize = 16.sp,
            fontFamily = FontFamily(Font(R.font.corm))
          )
        )
...
            modifier = Modifier
              .clip(shape = RoundedCornerShape(16.dp, 16.dp, 16.dp, 16.dp))
              .background(Color(0xFFE4DDD5))
          ) {
            Icon(
              imageVector = Icons.Filled.Delete,
              contentDescription = "Delete",
            )
          }
        }

        Box(
          modifier = Modifier
...
            modifier = Modifier
              .clip(shape = RoundedCornerShape(16.dp, 16.dp, 16.dp, 16.dp))
              .background(Color(0xFFE4DDD5))
          ) {
            Icon(
              imageVector = Icons.Filled.Done,
              contentDescription = "Save",
            )
          }
        }

        Box(
          modifier = Modifier
...
            modifier = Modifier
              .clip(shape = RoundedCornerShape(16.dp, 16.dp, 16.dp, 16.dp))
              .background(Color(0xFFE4DDD5))
          ) {
            Icon(
              imageVector = Icons.Filled.ArrowBack,
              contentDescription = "Back",
            )
          }
        }
      }

      Spacer(
...
