...
      ) {
        TextField(
          value = updateUsername,
          onValueChange = { updateUsername = it },
          label = {
            Text(
              text = "UPDATE USERNAME",
              style = TextStyle(
                fontFamily = FontFamily(Font(R.font.corm))
              )
            )
          },
          textStyle = TextStyle.Default.copy(fontFamily = FontFamily(Font(R.font.corm))),
...
          onValueChange = {
            updateEmail = it
            isEmailValid = it.isValidEmail()
          },
          label = {
            Text(
              text = "UPDATE EMAIL ADDRESS",
              style = TextStyle(
                fontFamily = FontFamily(Font(R.font.corm))
              )
            )
          },
          textStyle = TextStyle.Default.copy(fontFamily = FontFamily(Font(R.font.corm))),
...
          onValueChange = {
            updatePassword = it
            isPasswordValid = it.length >= 8
          },
          label = {
            Text(
              text = "UPDATE PASSWORD",
              style = TextStyle(
                fontFamily = FontFamily(Font(R.font.corm))
              )
            )
          },
          visualTransformation = PasswordVisualTransformation(),
...

        TextField(
          value = updateConfirmPassword,
          onValueChange = { updateConfirmPassword = it },
          label = {
            Text(
              text = "CONFIRM UPDATE PASSWORD",
              style = TextStyle(
                fontFamily = FontFamily(Font(R.font.corm))
              )
            )
          },
          visualTransformation = PasswordVisualTransformation(),
...
          modifier = Modifier
            .clip(shape = RoundedCornerShape(16.dp, 16.dp, 16.dp, 16.dp))
            .background(Color(0xFFE4DDD5))
        ) {
          Icon(
            imageVector = Icons.Filled.Check,
            contentDescription = "Save Profile",
          )
        }
      }
    }
  }
}
